# bill-bill-bill

./: .clang-format  CMakeLists.txt  README.md  main.cpp
.github/workflows/: run-tests.yml
src/: CMakeLists.txt  ImageProcessor.h  ImageProcessor.hpp  ImageProcessor.tpp  find.cpp  find.h  find.hpp
src/cli/: CMakeLists.txt  StatusCodeException.cpp  StatusCodeException.hpp
tests/: CMakeLists.txt  ImageProcessorTest.cpp  findTest.cpp  tests.cpp
